Primera subida de la web de fotografia pndt mejorar

--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
       <article>
         <form
           id="contact-form"
-          action="mailto:pabloberjon@hotmail.com"
+          action="mailto:mishell25597@hotmail.com"
           method="post"
           enctype="text/plain"
         >
