--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
           <li><a href="contacto.html">Contacto</a></li>
           <li>
             <a
-              href="https://instagram.com/deja_vu_photographs?igshid=MTIyMzRjYmRlZg=="
+              href="https://www.instagram.com/deja_vu_photographs/"
               target="_blank"
               >Instagram</a
             >
