añadidas fotos y adaptadas las paginas

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <article>
-        <h1 id="typing-text">Mishell Farinango</h1>
+        <h1 id="typing-text"><span></span></h1>
         <p><a href="#" id="rotate-text">Sobre mí</a></p>
       </article>
     </main>
