--- a/portfolio.html
+++ b/portfolio.html
@@ -28,59 +28,57 @@
           </li>
         </ul>
       </nav>
+      <h1>PORTFOLIO</h1>
     </header>
 
     <main>
-      <article>
-        <a href="retrato.html"
-          ><img
-            src="img/RetratoPortada.jpeg"
-            alt="Chica tumbada sobre el suelo en blanco y negro"
-          />
-          <p>Retrato</p></a
-        >
-      </article>
-      <article>
-        <a href="animales.html"
-          ><img
-            src="img/AnimalesPortada.jpeg"
-            alt="Perro en blanco y negro detras de unos barrotes"
-          />
-          <p>Animales</p></a
-        >
-      </article>
-      <article>
-        <a href="urbano.html"
-          ><img
-            src="img/UrbanoPortada.jpeg"
-            alt="Torre de iglesia en blanco y negro vista al fondo entre dos edificos"
-          />
-          <p>Urbano</p></a
-        >
-      </article>
-      <article>
-        <a href="paisaje.html"
-          ><img src="img/PaisajePortada.jpeg" alt="Flores en un atardecer" />
-          <p>Paisaje</p></a
-        >
-      </article>
-      <article>
-        <a href="lightpainting.html"
-          ><img
-            src="img/LightpaintingPortada.jpeg"
-            alt="Circulo de luz creado con un foco"
-          />
-          <p>Light painting</p></a
-        >
-      </article>
-      <article>
-        <a href="coches.html"
-          ><img
-            src="img/CochesPortada.jpeg"
-            alt="Coche de carreras haciendo un derrape en una curva"
-          />
-          <p>Coches</p></a
-        >
+      <article class="picturesContainer">
+        <div class="wordsFilter">
+          <p>Todo</p>
+          <p>Animales</p>
+          <p>Arquitectura</p>
+          <p>B&N</p>
+          <p>Coches</p>
+          <p>Naturaleza</p>
+          <p>Sesiones</p>
+          <p>Urbano</p>
+          <p>Video</p>
+        </div>
+        <div class="pictures">
+          <div class="picture">
+            <img src="img/Portada1.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Portada2.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Retrato1.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Animales1.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Animales2.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img
+              src="img/RetratoPortada.jpeg"
+              alt="campanario de una iglesia"
+            />
+          </div>
+          <div class="picture">
+            <img src="img/paisaje.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Coches2.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/Retrato2.jpeg" alt="campanario de una iglesia" />
+          </div>
+          <div class="picture">
+            <img src="img/catedral.jpeg" alt="campanario de una iglesia" />
+          </div>
+        </div>
       </article>
     </main>
   </body>
