--- a/sobreMi.html
+++ b/sobreMi.html
@@ -28,19 +28,21 @@
           </li>
         </ul>
       </nav>
+      <h1 id="typing-text">Mishell Farinango</h1>
     </header>
 
     <main>
       <article>
-        <h1 id="typing-text">Mishell Farinango</h1>
-        <img src="img/Mishell.jpeg" alt="Foto de Mishell" />
-        <p>
-          Decir que la fotografía me gusta puede sonar a cliché pero me encanta
-          y me gustaría que pudieses verlo en persona. La fotografía no son solo
-          imágenes son momentos únicos captados para siempre. Y eso quiero hacer
-          a través de mi trabajo, crear recuerdos perdurables y captar toda la
-          esencia que el mundo nos ofrece día a día.
-        </p>
+        <div class="infoContainer">
+          <img src="img/Mishell.jpeg" alt="Foto de Mishell" />
+          <p>
+            Decir que la fotografía me gusta puede sonar a cliché pero me
+            encanta y me gustaría que pudieses verlo en persona. La fotografía
+            no son solo imágenes son momentos únicos captados para siempre. Y
+            eso quiero hacer a través de mi trabajo, crear recuerdos perdurables
+            y captar toda la esencia que el mundo nos ofrece día a día.
+          </p>
+        </div>
       </article>
     </main>
 
