Modificado el index por un problema con la etiqueta rotativa y modificado el nav de contacto

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <article>
         <h1 id="typing-text"><span></span></h1>
-        <p><a href="#" id="rotate-text">Sobre mí</a></p>
+        <p><a href="sobreMi.html" id="rotate-text">Sobre mí</a></p>
       </article>
     </main>
 
